# advent_of_code

./: .gitignore  Cargo.toml  LICENSE  justfile
advent_of_code_2024/: Cargo.toml
advent_of_code_2024/inputs/test/: day9_test_2.txt
advent_of_code_2024/results/: day1.txt  day13.txt  day15.txt  day2.txt  day5.txt  day7.txt
advent_of_code_2024/results/test/: day11.txt  day13.txt  day15.txt  day15_large.txt  day9_test_2.txt
advent_of_code_2024/src/: lib.rs  main.rs
advent_of_code_2024/src/calendar/day10/: mod.rs
advent_of_code_2024/src/calendar/day11/: mod.rs
advent_of_code_2024/src/calendar/day12/: mod.rs  part1.rs  part2.rs
advent_of_code_2024/src/calendar/day13/: mod.rs  part1.rs  part2.rs
advent_of_code_2024/src/calendar/day15/: mod.rs
advent_of_code_2024/src/calendar/day4/: mod.rs
advent_of_code_2024/src/calendar/day9/: mod.rs
advent_of_code_2024/src/puzzle/day10/: part1.rs  part2.rs
advent_of_code_2024/src/puzzle/day14/: mod.rs  part1.rs
advent_of_code_2024/src/puzzle/day15/: part1.rs
advent_of_code_2024/src/puzzle/day6/: mod.rs
advent_of_code_2024/src/puzzles/day1/: mod.rs
advent_of_code_2024/src/puzzles/day13/: part1.rs  part2.rs
advent_of_code_2024/src/puzzles/day14/: mod.rs  part2.rs
advent_of_code_2024/src/puzzles/day2/: mod.rs
advent_of_code_2024/src/puzzles/day5/: mod.rs
advent_of_code_2024/test/: day10.rs  day13.rs  day14.rs
advent_of_code_2024/tests/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  part1.rs  sample.rs
(+177 files in other folders)
