[package]
name = "advent_of_code_2024"
version = "0.15.2"
edition = "2024"

[dependencies]
advent_of_code_common = { path = "../advent_of_code_common" }
advent_of_code_inputs = { path = "../advent_of_code_inputs" }
advent_of_code_results = { path = "../advent_of_code_results" }
just = "1.38.0"
regex = "1"
